Changed microservices purpose to recipe manager on aws

--- a/aws-client-handler/pom.xml
+++ b/aws-client-handler/pom.xml
@@ -9,21 +9,15 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>pl.kania</groupId>
-	<artifactId>popular-topic-detector-tste</artifactId>
+	<artifactId>aws-client-handler</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>popular-topic-detector-tste</name>
-	<description>Demo project for Spring Boot</description>
+	<name>aws-client-handler</name>
 
 	<properties>
 		<java.version>15</java.version>
 	</properties>
 
 	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-jersey</artifactId>
-		</dependency>
-
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -34,8 +28,22 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>org.junit.vintage</groupId>
+					<artifactId>junit-vintage-engine</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
 	</dependencies>
-
 	<build>
 		<plugins>
 			<plugin>
