--- a/aws-client-handler/pom.xml
+++ b/aws-client-handler/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>pl.kania</groupId>
-	<artifactId>aws-client-handler</artifactId>
+	<artifactId>aws-recipe-console-client</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>aws-client-handler</name>
+	<name>aws-recipe-console-client</name>
 
 	<properties>
 		<java.version>15</java.version>
